--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "styled-component": "^2.8.0",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
